[package]
name = "polite_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["gzip", "brotli", "deflate", "rustls-tls"] }
scraper = "0.18"
url = "2"
robots_txt = "0.7"
dashmap = "5"
anyhow = "1"
chrono = "0.4"
