[package]
name = "web-crawler"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
scraper = "0.22.0"
url = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.0"
anyhow = "1.0"
robots_txt = "1.0"
md5 = "0.7"
zstd = "0.13"
futures-util = "0.3"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
